--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
    <header>
 
         <h1>Individual cleanliness</h1>
-        <h3 style="color:lightcoral;">Looking for tips on individual cleanliness and how to maintain it because             people keep staring at you weird or simply because you want to do it? well, honey you've come to the             right place!!!<h3>
+        <h3 style="color:lightcoral;">Looking for tips on individual cleanliness and how to maintain it because people keep staring at you weird or simply because you want to        do it? well, honey you've come to the   right place!!!<h3>
    </header>
    <main> 
     <article>
      <section>
          <p style="text-align:center;color:Peru;background-color:MistyRose;>
-          Alright, let's make sure you know what individual cleanliness is first;<br> individual cleanliness can also be referred to as personal hygiene and           it's the act of keeping yourself and your surroundings                clean.<br>
+          Alright, let's make sure you know what individual cleanliness is first;<br> individual cleanliness can also be referred to as personal hygiene and  it's the act of           keeping yourself and your surroundings clean.<br>
           doesn't sound too hard, does it?<br>
           But have you been keeping yourself clean and neat?<br>
           If yes, great, (why are you here lol)<br>
@@ -28,8 +28,8 @@
      <section>
         <h3>why is it necessary?</h3>
            <p style="text-align:center;color:RosyBrown;background-color:MistyRose;">
-           Since human beings in general wont do soemthing necessary when they dont see the importance of it, I'm going to now tell you why you need to maintain individual cleanliness.<br>
-           before you skip this, why? reading this will help you increase the drive to stay clean, even if you already know the reasons, revise so that it stays with you.<br><hr>
+           Since human beings in general wont do soemthing necessary when they dont see the importance of it, I'm going to now tell you why you need to maintain individual               cleanliness.<br>
+           before you skip this, why? reading this will help you increase the drive to stay clean, even if you already know the reasons, revise so that it stays with you.<br>            <hr>
        <h4 style="color:lightcoral;"><i>EFFECTS OF UNTIDINESS ON PHYSICAL HEALTH & MENTAL HEALTH</i></h4>
          <ol style="color:rosybrown;background-color:mistyrose;"><div>
              <li>Having an untidy or dirty room or living space, can trigger allegries.</li>
@@ -37,11 +37,11 @@
              <li>Eating healthy and clean is also a part of individual cleanliness, we can drastically  reduce the spread of diseases like Jaundice, Cholera, Ascariasis, Leptospirosis, Ringworm and many                  others by just eating and drinking non- contaminated water and living in hygienic                                   conditions.</li>
              <li>It also has various effects on inducing motivation, according to just household observation we  can see that children or adults working in a messy enivronment tend to have lesser drive or                         motivation to work ad working less or not having the <i>mood</i> will adversely affect their                        mental health again as they feel lazy and incompendent due to the environment.</li>
              <li>the relaxed, nice feeling, the motivation and the confidence all depends on the environment the   person spends time and grows up in. I think we must all know that the envirnoment hugely affects                    the productivity and happiness of a person and certain designs and colors have have experimentally                  proved to calm or improve the mood of the person, the point here is that an effective lifestye                      requires a tidy and neat environment</li>
-            <img src="![messy](https://user-images.githubusercontent.com/83756719/117363704-902e7780-aeda-11eb-88f0-04feee644c65.jpeg)" width="300" height="200" alt="Photo of a cute cat" border="5" >
-            <img src="![CAT](https://user-images.githubusercontent.com/83756719/117363693-8e64b400-aeda-11eb-9a27-bfbbb0c5c795.jpeg)" width="220" height="120" alt="photo of a messy table" class="center" border="5">
+            <img src="![messy](https://user-images.githubusercontent.com/83756719/117363704-902e7780-aeda-11eb-88f0-04feee644c65.jpeg)?raw=true" width="300" height="200" alt="Photo of a cute cat" border="5" >
+            <img src="![CAT](https://user-images.githubusercontent.com/83756719/117363693-8e64b400-aeda-11eb-9a27-bfbbb0c5c795.jpeg)?raw=true" width="220" height="120" alt="photo of a messy table" class="center" border="5">
 
  <img src="
-![study tablE](https://user-images.githubusercontent.com/83756719/117364012-07640b80-aedb-11eb-8841-e49480063bbe.jpeg)" width="400" height="200"class="right" border="1">
+![study tablE](https://user-images.githubusercontent.com/83756719/117364012-07640b80-aedb-11eb-8841-e49480063bbe.jpeg)?raw=true" width="400" height="200"class="right" border="5">
 <!-- nope -->
          </div></ol>
         </p>
@@ -50,11 +50,11 @@
       <ol style="color:FireBrick ;background-color:MistyRose;">
       Alright, now that we've seen why we need to keep it up, let's see how we can do so.<br>
       <li>Washing hands before and after eating and after going to the toilet.This is something which is one of          the most basic but important even if it may seem insignificant.<br>
-         <img src="![sinksinksink](https://user-images.githubusercontent.com/83756719/117363710-9290d180-aeda-11eb-8385-6d9feff06808.jpeg)" width="180" border="1"><BR>
+         <img src="![sinksinksink](https://user-images.githubusercontent.com/83756719/117363710-9290d180-aeda-11eb-8385-6d9feff06808.jpeg)?raw=true" width="180" border="1"><BR>
      Incase you are so lazy, that even washing hands before and after a meal is hard for you, here's a fun way & if      you feel bored sing and dance as you wash.<br></li>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/35XBgQ20qls" title="YouTube video player"      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-         picture" allowfullscreen></iframe><br>
     <li>2.Washing clothes regularly and wearing only clean ones.<br>
-    <img src="![dettol](https://user-images.githubusercontent.com/83756719/117363700-8f95e100-aeda-11eb-94fc-b4531bcc62ea.jpeg)" width="180" border="1"><img src="![ariYeL](https://user-images.githubusercontent.com/83756719/117363692-8e64b400-aeda-11eb-8ac9-d64bc63d4466.jpeg)" width="180" border="1"><br>
+    <img src="![dettol](https://user-images.githubusercontent.com/83756719/117363700-8f95e100-aeda-11eb-94fc-b4531bcc62ea.jpeg)?raw=true" width="180" border="1"><img src="![ariYeL](https://user-images.githubusercontent.com/83756719/117363692-8e64b400-aeda-11eb-8ac9-d64bc63d4466.jpeg)?raw=true" width="180" border="1"><br>
     Again, if you dont know how to do your laundry, its alright, I've got you.<br>
     This one is for handwashing:<BR>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/y6VpqAWkWCw" title="YouTube video player"        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-            picture" allowfullscreen></iframe><br>
@@ -77,7 +77,7 @@ This is a bath tutorial:<br>
 Showers and baths are stress relieving and they clean and exfoliate our skin.</li>
 <li>wash your bath towels regularly,the steps to washing a towel are the same as the ones for doing laundry</li>
 <li>clean and cut your nails regularly<br>
-<img src="![cutyonails!](https://user-images.githubusercontent.com/83756719/117363696-8efd4a80-aeda-11eb-998b-8212e067b521.jpeg)"width="180" border="1"><br>
+<img src="![cutyonails!](https://user-images.githubusercontent.com/83756719/117363696-8efd4a80-aeda-11eb-998b-8212e067b521.jpeg)?raw=true"width="180" border="1"><br>
 Since we as human beings use our hands a lot, they may harbour many dangerous and unknown germs which could cause mild to very serious harm to our bodies.<br>
 And..Cutting nails are fun! its like an art right? snipping and shaping.
 Here's a tutorial for you incase you weren't familiar with how it goes. It's alright, we're all here to learn aren't we?
@@ -110,7 +110,7 @@ But if its unchecked after 10 days, then I hope you've quite some serious circum
 </article>
 <footer>
 <h5 style="color:lightsalmon">ABOUT THE AUTHOR</h5>
-<img src="![hmf](https://user-images.githubusercontent.com/83756719/117363702-902e7780-aeda-11eb-986f-4946953b1ff0.jpeg)"width="70" border="2">
+<img src="![hmf](https://user-images.githubusercontent.com/83756719/117363702-902e7780-aeda-11eb-986f-4946953b1ff0.jpeg)?raw=true"width="70" border="2">
 <p style="color:salmon;"><small>she/her, 15 & has yet to achieve much in life<small></p>
 <p style="color:pink;"><i><small>p.s, this is also a project help for my sister so plis be nice</small></i></p>
 </footer>
