--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="![messy](https://user-images.githubusercontent.com/83756719/117363704-902e7780-aeda-11eb-88f0-04feee644c65.jpeg)?raw=true" width="300" height="200" alt="Photo of a cute cat" border="5" >
             <img src="![CAT](https://user-images.githubusercontent.com/83756719/117363693-8e64b400-aeda-11eb-9a27-bfbbb0c5c795.jpeg)?raw=true" width="220" height="120" alt="photo of a messy table" class="center" border="5">
 
- <img src="study tablE.jpeg" width="400" height="200"class="right" border="5">
+ <img src="study tablE.jpeg" width="400" height="200"class="right" border="5" atl="">
 <!-- nope -->
          </div></ol>
         </p>
