--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
    <header>
 
         <h1>Individual cleanliness</h1>
-        <h3 style="color:lightcoral;">Looking for tips on individual cleanliness and how to maintain it becausepeople keep staring at you           weird or simply because you want to do it? well, honey you've come to the   right place!!!<h3>
+        <h3 style="color:lightcoral;">Looking for tips on individual cleanliness and how to maintain it becausepeople keep staring at you  weird or simply because you want to do it? well, honey you've come to the   right place!!!<h3>
    </header>
    <main> 
     <article>
      <section>
          <p style="text-align:center;color:Peru;background-color:MistyRose;>
-          Alright, let's make sure you know what individual cleanliness is first;<br> individual cleanliness can also be referred to as               personal hygiene and it's the act of keeping yourself and your surroundings clean.<br>
+          Alright, let's make sure you know what individual cleanliness is first;<br> individual cleanliness can also be referred to as    personal hygiene and it's the act of keeping yourself and your surroundings clean.<br>
           doesn't sound too hard, does it?<br>
           But have you been keeping yourself clean and neat?<br>
           If yes, great, (why are you here lol)<br>
@@ -28,15 +28,18 @@
      <section>
         <h3>why is it necessary?</h3>
            <p style="text-align:center;color:RosyBrown;background-color:MistyRose;">
-           Since human beings in general wont do soemthing necessary when they dont see the importance of it, I'm going to now tell you why            you need to maintain individual cleanliness.<br>
-           before you skip this, why? reading this will help you increase the drive to stay clean, even if you already know the reasons,                revise so that it stays with you.<br><hr>
+           Since human beings in general wont do soemthing necessary when they dont see the importance of it, I'm going to now tell you whyyou need to maintain individual cleanliness.<br>
+           before you skip this, why? reading this will help you increase the drive to stay clean, even if you already know the reasons, revise so that it stays with you.<br><hr>
        <h4 style="color:lightcoral;"><i>EFFECTS OF UNTIDINESS ON PHYSICAL HEALTH & MENTAL HEALTH</i></h4>
          <ol style="color:rosybrown;background-color:mistyrose;"><div>
              <li>Having an untidy or dirty room or living space, can trigger allegries.</li>
-             <li>Diseases like typhoid, hepaptitis and dengue can be mostly avoided by regularly sanitizing and maintaining an attentively                clean environment.</li>
-             <li>Eating healthy and clean is also a part of individual cleanliness, we can drastically reduce the spread of diseases like                   Jaundice, Cholera, Ascariasis, Leptospirosis, Ringworm and many others by just eating and drinking non- contaminated water                   and living in hygienic conditions.</li>
-             <li>It also has various effects on inducing motivation, according to just household observation we can see that children or                       adults working in a messy enivronment tend to have lesser drive or motivation to work ad working  less or not having the                    <i>mood</i> will adversely affect their mental health again as they feel lazy and incompendent due to the environment.</li>
-             <li>the relaxed, nice feeling, the motivation and the confidence all depends on the environment the                 person spends time and grows up in. I think we must all know that the envirnoment hugely affects                    the productivity and happiness of a person and certain designs and colors have have experimentally                  proved to calm or improve the mood of the person, the point here is that an effective lifestye                      requires a tidy and neat environment</li>
+             <li>Diseases like typhoid, hepaptitis and dengue can be mostly avoided by regularly sanitizing and maintaining an attentively lean environment.</li>
+             <li>Eating healthy and clean is also a part of individual cleanliness, we can drastically reduce the spread of diseases like  Jaundice, Cholera, Ascariasis, Leptospirosis,
+              Ringworm and many others by just eating and drinking non- contaminated water    and living in hygienic conditions.</li>
+             <li>It also has various effects on inducing motivation, according to just household observation we can see that children or adults working in a messy enivronment tend to have lesser drive or motivation to work ad working  less or not having the  
+                <i>mood</i> will adversely affect their mental health again as they feel lazy and incompendent due to the environment.</li>
+             <li>the relaxed, nice feeling, the motivation and the confidence all depends on the environment the   person spends time and grows up in.
+                I think we must all know that the envirnoment hugely affects   the productivity and happiness of a person and certain designs and colors have have experimentally                  proved to calm or improve the mood of the person, the point here is that an effective lifestye                      requires a tidy and neat environment</li>
             <img src="messy.jpeg" width="300" height="200" alt="Photo of a cute cat" border="5" >
             <img src="CAT.jpeg" width="220" height="120" alt="photo of a messy table" class="center" border="5">
 
@@ -48,19 +51,19 @@
    <section><h3 style="color:crimson;">how to maintain basic cleanliness & personal hygiene</h3>
       <ol style="color:FireBrick ;background-color:MistyRose;">
       Alright, now that we've seen why we need to keep it up, let's see how we can do so.<br>
-      <li>Washing hands before and after eating and after going to the toilet.This is something which is one of          the most basic but important even if it may seem insignificant.<br>
+      <li>Washing hands before and after eating and after going to the toilet.This is something which is one of the most basic but important even if it may seem insignificant.<br>
          <img src="sinksinksink.jpeg" width="180" border="1"><BR>
-     Incase you are so lazy, that even washing hands before and after a meal is hard for you, here's a fun way & if      you feel bored sing and dance as you wash.<br></li>
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/35XBgQ20qls" title="YouTube video player"      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-         picture" allowfullscreen></iframe><br>
+     Incase you are so lazy, that even washing hands before and after a meal is hard for you, here's a fun way & if  you feel bored sing and dance as you wash.<br></li>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/35XBgQ20qls" title="YouTube video player"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-  picture" allowfullscreen></iframe><br>
     <li>2.Washing clothes regularly and wearing only clean ones.<br>
     <img src="dettol.jpeg" width="180" border="1"><img src="ariYel.jpeg" width="180" border="1"><br>
     Again, if you dont know how to do your laundry, its alright, I've got you.<br>
     This one is for handwashing:<BR>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/y6VpqAWkWCw" title="YouTube video player"        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-            picture" allowfullscreen></iframe><br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/y6VpqAWkWCw" title="YouTube video player"        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-  picture" allowfullscreen></iframe><br>
     This one is for machine wash:<br>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/jpyDwYBpiIc" title="YouTube video player"       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-    picture" allowfullscreen></iframe><br>
-    If you dont <i>feel</i> the motivation to do this, let me just tell you, how <i>accomplised</i> you are going     to feel at the end of the day for pouring this much effort into the day and living it rightly and     fullfillingy.<br>
-    And yes ofcourse, how beneficial its going to be to lift your mood, how much better its going to be for you     skin and so on and so on.</li>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/jpyDwYBpiIc" title="YouTube video player"       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-  picture" allowfullscreen></iframe><br>
+    If you dont <i>feel</i> the motivation to do this, let me just tell you, how <i>accomplised</i> you are going  to feel at the end of the day for pouring this much effort into the day and living it rightly and fullfillingy.<br>
+    And yes ofcourse, how beneficial its going to be to lift your mood, how much better its going to be for you  skin and so on and so on.</li>
    <li>brushing teeth your teeth twice a day.<br>
    for this, turn on your favorite song, and vibe whilst you brush or do it peacefully.<br>
     And here's a video ofcourse<br>
@@ -103,9 +106,11 @@ Hey! now that I've told you how to do it, Let's see how much of its you've done 
 <li style="background-color:mistyrose">Have you cleaned and cut your nails least once a week or whenever necessary?<br><input type="checkbox"/></li>
 <li style="background-color:mistyrose">Sneeze without exposing anyone elsearounf you to it?<br><input type="checkbox"/></li>
 </ol></form>
-<p style="color:rosybrown;background-color:mistyrose;">If even one of these boxes are unchecked then, It's okay its your first day after all. Come back to me in 10 days it better be all checked that day.<br>
+<p style="color:rosybrown;background-color:mistyrose;">If even one of these boxes are unchecked then, It's okay its your first day after all. 
+                                                      Come back to me in 10 days it better be all checked that day.<br>
 If you've come here after 10 days and all the boxes are checked then CONGRATULATIONS!! I'm really proud of you & please keep this up.<br>
-But if its unchecked after 10 days, then I hope you've quite some serious circumstances to not be able to perform such basic tasks, I'm dissapointed. Please come back after another 10 days.</p>
+But if its unchecked after 10 days, then I hope you've quite some serious circumstances to not be able to perform such basic tasks, I'm dissapointed.
+                                                      Please come back after another 10 days.</p>
 </article>
 <footer>
 <h5 style="color:lightsalmon">ABOUT THE AUTHOR</h5>
@@ -118,7 +123,9 @@ But if its unchecked after 10 days, then I hope you've quite some serious circum
 <!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24YtiG9.e8Zk9eb%2FWPZ2AGy0"+"&opts=16862&num=10&ts=1620298933891");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"),
+ h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24YtiG9.e8Zk9eb%2FWPZ2AGy0"+"&opts=16862&num=10&ts=1620298933891");
+ if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 <!-- end www.htmlcommentbox.com -->
              
         
