--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
      Incase you are so lazy, that even washing hands before and after a meal is hard for you, here's a fun way & if  you feel bored sing and dance as you wash.<br></li>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/35XBgQ20qls" title="YouTube video player"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-  picture" allowfullscreen></iframe><br>
     <li>2.Washing clothes regularly and wearing only clean ones.<br>
-    <img src="dettol.jpeg" width="180" border="1"><img src="ariYel.jpeg" width="180" border="1"><br>
+    <img src="dettol.jpeg" width="180" border="1"><img src="ariYel.jpeg" width="180" border="1" alt=""><br>
     Again, if you dont know how to do your laundry, its alright, I've got you.<br>
     This one is for handwashing:<BR>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/y6VpqAWkWCw" title="YouTube video player"        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-  picture" allowfullscreen></iframe><br>
