--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <section>
         <h3>why is it necessary?</h3>
            <p style="text-align:center;color:RosyBrown;background-color:MistyRose;">
-           Since human beings in general wont do soemthing necessary when they dont see the importance of it, I'm going to now tell you whyyou need to maintain individual cleanliness.<br>
+           Since human beings in general wont do soemthing necessary when they dont see the importance of it, I'm going to now tell you why you need to maintain individual cleanliness.<br>
            before you skip this, why? reading this will help you increase the drive to stay clean, even if you already know the reasons, revise so that it stays with you.<br><hr>
        <h4 style="color:lightcoral;"><i>EFFECTS OF UNTIDINESS ON PHYSICAL HEALTH & MENTAL HEALTH</i></h4>
          <ol style="color:rosybrown;background-color:mistyrose;"><div>
@@ -69,7 +69,7 @@
     And here's a video ofcourse<br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/zIJvqkj8c0s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 <li>taking regular showers or baths.<br>
-<img src="shavvahshavvah~.jpeg" width="280" border="1"><img src="dEo.jpeg" width="100" border="1"><br> and yes I have attached a shower and bath tutorial for you as well with the steps and <i>no,</i> not the process.<br>
+<img src="shavvahshavvah~.jpeg" width="280" border="1"><br> and yes I have attached a shower and bath tutorial for you as well with the steps and <i>no,</i> not the process.<br>
 This is a shower tutorial:<br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/T0Ah-T96wW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 This is for a bucket bath:<br>
