--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Hey! now that I've told you how to do it, Let's see how much of its you've done 
 <li style="background-color:mistyrose">have you taken a shower or bath in the past 12 hours?<br><input type="checkbox"/></li>
 <li style="background-color:mistyrose">Are you using a clean bath towel to wipe yourself?<br><input type="checkbox"/><br></li>
 <li style="background-color:mistyrose">Have you cleaned and cut your nails least once a week or whenever necessary?<br><input type="checkbox"/></li>
-<li style="background-color:mistyrose">Sneeze without exposing anyone elsearounf you to it?<br><input type="checkbox"/></li>
+<li style="background-color:mistyrose">Sneeze without exposing anyone else around you to it?<br><input type="checkbox"/></li>
 </ol></form>
 <p style="color:rosybrown;background-color:mistyrose;">If even one of these boxes are unchecked then, It's okay its your first day after all. 
                                                       Come back to me in 10 days it better be all checked that day.<br>
@@ -116,6 +116,7 @@ But if its unchecked after 10 days, then I hope you've quite some serious circum
 <h5 style="color:lightsalmon">ABOUT THE AUTHOR</h5>
 <img src="hmf.jpeg"width="70" border="2">
 <p style="color:salmon;"><small>she/her, 15 & has yet to achieve much in life<small></p>
+<p style="color:salmon:"><small> credit to my friends for the support, echi for biskit and some other stuff and thankyou Carol for the help</small></p>                       
 <p style="color:pink;"><i><small>p.s, this is also a project help for my sister so plis be nice</small></i></p>
 </footer>
 </body>
