--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@ But if its unchecked after 10 days, then I hope you've quite some serious circum
 <footer>
 <h5 style="color:lightsalmon">ABOUT THE AUTHOR</h5>
 <img src="hmf.jpeg"width="70" border="2">
-<p style="color:salmon;"><small>she/her, 15 & has yet to achieve much in life<small></p>
-<p style="color:salmon:"><small> credit to my friends for the support, echi for biskit and some other stuff and thankyou Carol for the help</small></p>                       
+<p style="color:salmon;"><small>she/her, 15 & has yet to achieve much in life<br>credit to my friends for the support, echi for biskit and some other stuff and thankyou Carol for the help    <small></p>
+                    
 <p style="color:pink;"><i><small>p.s, this is also a project help for my sister so plis be nice</small></i></p>
 </footer>
 </body>
