--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="author" content="Malavika U">
 <meta name="keywords" content="individual, cleanliness, personal, hygiene, help">
 <meta name="viewport" content="width"=device-width, initial scale="1">
+<a href="real-image.png" ><img src="study tablE.jpeg"><a>
 <title>Individual cleanliness</title>
 </head>
 <body style="background-color:Linen;font-family:'courier new">
