--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <i>mood</i> will adversely affect their mental health again as they feel lazy and incompendent due to the environment.</li>
              <li>the relaxed, nice feeling, the motivation and the confidence all depends on the environment the   person spends time and grows up in.
                 I think we must all know that the envirnoment hugely affects   the productivity and happiness of a person and certain designs and colors have have experimentally                  proved to calm or improve the mood of the person, the point here is that an effective lifestye                      requires a tidy and neat environment</li>
-            <img src="messy.jpeg" width="300" height="200" alt="Photo of a cute cat" border="5" >
-            <img src="CAT.jpeg" width="220" height="120" alt="photo of a messy table" class="center" border="5">
+             <img src="study tablE.jpeg" width="400" height="200"class="right" border="1">
+            <img src="CAT.jpeg" width="220" height="120" alt="photo of a messy table" class="center" border="5"><img src="messy.jpeg" width="300" height="200" alt="Photo of a cute cat" border="5" >
 
- <img src="study tablE.jpeg" width="400" height="200"class="right" border="1">
+
 <!-- nope -->
          </div></ol>
         </p>
