--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <main> 
     <article>
      <section>
-         <p style="text-align:center;color:Peru;background-color:MistyRose;>
+         <p style="text-align:center;color:Peru;background-color:MistyRose;">
           Alright, let's make sure you know what individual cleanliness is first;<br> individual cleanliness can also be referred to as    personal hygiene and it's the act of keeping yourself and your surroundings clean.<br>
           doesn't sound too hard, does it?<br>
           But have you been keeping yourself clean and neat?<br>
